<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.0</version>
    </parent>

    <groupId>ee.openeid.siga</groupId>
    <artifactId>siga-parent</artifactId>
    <version>2.8.2</version>
    <packaging>pom</packaging>
    <name>Signature Gateway</name>

    <modules>
        <module>siga-common</module>
        <module>siga-webapp</module>
        <module>siga-auth</module>
        <module>siga-session-storage</module>
        <module>siga-signature-service</module>
        <module>siga-monitoring</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <webapp.packaging>jar</webapp.packaging>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
        <sonar.exclusions>
            **/ee/openeid/siga/webapp/json/*,
            **/ee/openeid/siga/client/**/*,
            **/ee/openeid/siga/service/signature/configuration/*,
            **/ee/openeid/siga/mobileid/model/mid/*,
            **/ee/openeid/siga/common/model/*,
            **/ee/openeid/siga/common/exception/*
        </sonar.exclusions>
        <sonar.language>java</sonar.language>

        <bouncycastle.version>1.70</bouncycastle.version>
        <commons-compress.version>1.24.0</commons-compress.version>
        <digidoc4j.version>5.2.0</digidoc4j.version>
        <guava.version>32.1.2-jre</guava.version>
        <ignite.version>2.15.0</ignite.version>
        <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
        <jaxb-runtime.version>2.3.9</jaxb-runtime.version>
        <json.version>20230618</json.version>

        <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
        <cxf-wadl2java-plugin.version>4.0.3</cxf-wadl2java-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <spring-boot.build-image.builder>paketobuildpacks/builder:tiny</spring-boot.build-image.builder>
        <spring-boot.build-image.imageName>${project.artifactId}:latest</spring-boot.build-image.imageName>

        <!-- Override vulnerable dependencies that are pulled in via Spring boot -->
        <!-- TODO: Amend this list when Spring Boot version is updated! -->
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
        </dependency>
        <dependency>
            <groupId>co.elastic.logging</groupId>
            <artifactId>logback-ecs-encoder</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <!-- Solves a duplicate JSON class warning in SessionStatusReprocessingServiceTest -->
            <exclusions>
                <exclusion>
                    <groupId>com.vaadin.external.google</groupId>
                    <artifactId>android-json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.0.0</version>
                <configuration>
                    <includeTransitiveDependencies>false</includeTransitiveDependencies>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/sun.security.x509=ALL-UNNAMED
                        --add-opens=java.base/java.security.cert=ALL-UNNAMED
                        ${argLine}
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>jacoco-initializ</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.10</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>war</id>
            <properties>
                <webapp.packaging>war</webapp.packaging>
            </properties>
        </profile>
    </profiles>
</project>
